Moved the ps H/M cases to the ps theorem file. Deleted the H/M case files. Removed more subsections within the ps area. New proof macros. Revised several ps H cases.

--- a/macros.tex
+++ b/macros.tex
@@ -198,10 +198,10 @@
 
 % Proof
 
-\newcommand{\proinv}{inversion lemma}
-\newcommand{\prouni}{uniqueness of types lemma}
-\newcommand{\procon}{canonical forms lemma}
-\newcommand{\profv}{forced value}
+\newcommand{\proinv}{inversion lemma\xspace}
+\newcommand{\prouni}{uniqueness of types lemma\xspace}
+\newcommand{\procan}{canonical forms lemma\xspace}
+\newcommand{\profv}{forced value\xspace}
 \newcommand{\profvs}{\profv{}s\xspace}
 
 %\newcommand{\}{}
