--- a/proof/theorems/progress/haskell-ml.tex
+++ b/proof/theorems/progress/haskell-ml.tex
@@ -1,56 +1,374 @@
-\begin{theorem}
+%\newcommand{\}{}
+\newcommand{\pshyp}[2]{#1 is a \profv or #1 \red #2 or #1 \red \emph{\experr{\varstr}}\xspace}
+\newcommand{\pshypref}[2]{\pshyp{#1}{#2} by the induction hypothesis.\xspace}
+\newcommand{\psval}[3]{If #1 is a \profv then \judeh{}{#1}{#2} by lemmas \ref{leminv} and \ref{lemuni} and #1 $=$ #3 by lemma \ref{lemcan}.\xspace}
+\newcommand{\pssub}[4]{If #1 \red #2 then #3 \red #4.\xspace}
+\newcommand{\psred}[2]{\redrule{#1}{#2}.\xspace}
+\newcommand{\pserr}[2]{If #1 \red \emph{\experr{\varstr}} then #2 \red \emph{\experr{\varstr}}.\xspace}
 
-\label{hmps}
+\begin{theorem}{Haskell Progress}
 
-If $\vdash_{A}e_{A}:T$ then $e_{A}$ is an unforced value or $e_{A}\rightarrow e_{A}'$ or $e_{A}\rightarrow$ \emph{\textbf{Error}: string} where $A\in\lbrace H,M\rbrace$.
+\label{thmhps}
+
+If \judeh{}{\varexph}{\vartyh} then \pshyp{\first{\varexph}}{\second{\varexph}}.
 
 \begin{proof}
 
-By structural induction on $e_{A}$.
+By structural induction on \varexph.
 
-\input{proof/cases/progress/haskell-ml/function.tex}
+% Haskell
 
-\input{proof/cases/progress/haskell-ml/type-abstraction.tex}
+% \x:t.e
 
-\input{proof/cases/progress/haskell-ml/number.tex}
+\newcommand{\psfabss}{\expfabss{\varvarh}{\vartyh}{\varexph}\xspace}
 
-\input{proof/cases/progress/haskell-ml/nil.tex}
+\begin{case}
 
-\input{proof/cases/progress/haskell-ml/cons-hv.tex}
+\psfabss
 
-\input{proof/cases/progress/haskell-ml/cons-mv.tex}
+\psfabss is a \profv.
 
-\input{proof/cases/progress/haskell-ml/haskell.tex}
+\end{case}
 
-\input{proof/cases/progress/haskell-ml/variable.tex}
+% \\u.e
 
-\input{proof/cases/progress/haskell-ml/function-application-h.tex}
+\newcommand{\pstabs}{\exptabs{\tyvarh}{\varexph}\xspace}
 
-\input{proof/cases/progress/haskell-ml/function-application-m.tex}
+\begin{case}
 
-\input{proof/cases/progress/haskell-ml/fix.tex}
+\pstabs
 
-\input{proof/cases/progress/haskell-ml/type-application.tex}
+\pstabs is a \profv.
 
-\input{proof/cases/progress/haskell-ml/cons-e.tex}
+\end{case}
 
-\input{proof/cases/progress/haskell-ml/fields-h.tex}
+% n
 
-\input{proof/cases/progress/haskell-ml/fields-m.tex}
+\newcommand{\psnum}{\expnum{\symnum}\xspace}
 
-\input{proof/cases/progress/haskell-ml/arithmetic.tex}
+\begin{case}
 
-\input{proof/cases/progress/haskell-ml/predicate-h.tex}
+\psnum
 
-\input{proof/cases/progress/haskell-ml/predicate-m.tex}
+\psnum is a \profv.
 
-\input{proof/cases/progress/haskell-ml/if0.tex}
+\end{case}
 
-\input{proof/cases/progress/haskell-ml/wrong.tex}
+% nil t
 
-\input{proof/cases/progress/haskell-ml/ml.tex}
+\newcommand{\psnils}{\expnils{\vartyh}\xspace}
 
-\input{proof/cases/progress/haskell-ml/scheme.tex}
+\begin{case}
+
+\psnils
+
+\psnils is a \profv.
+
+\end{case}
+
+% cons e e
+
+\newcommand{\psconsh}{\expcons{\first{\varexph}}{\second{\varexph}}\xspace}
+
+\begin{case}
+
+\psconsh
+
+\psconsh is a \profv.
+
+\end{case}
+
+% x
+
+\newcommand{\psvar}{\varvarh\xspace}
+
+\begin{case}
+
+\psvar
+
+Cannot occur because \varexph is closed.
+
+\end{case}
+
+% e e
+
+\newcommand{\psfapp}{\expfapp{\first{\varexph}}{\second{\varexph}}\xspace}
+\newcommand{\x}{\expfabss{\varvarh}{\first{\vartyh}}{\third{\varexph}}\xspace}
+
+\begin{case}
+
+\psfapp
+
+\pshypref
+{\first{\varexph}}
+{\third{\varexph}}
+\psval
+{\first{\varexph}}
+{\tyfun{\first{\vartyh}}{\second{\vartyh}}}
+{\x}
+\psred
+{\expfapp{(\x)}{\second{\varexph}}}
+{\expsubst{\third{\varexph}}{\second{\varexph}}{\varvarh}}
+\pssub
+{\first{\varexph}}
+{\third{\varexph}}
+{\psfapp}
+{\expfapp{\third{\varexph}}{\second{\varexph}}}
+\pserr
+{\first{\varexph}}
+{\psfapp}
+
+\end{case}
+
+% fix e
+
+\begin{case}
+
+$e_{A}=\mathtt{fix}$ $e_{A}^{1}$ where $A\in\lbrace H,M\rbrace$
+
+$e_{A}^{1}$ is an unforced value or $e_{A}^{1}\rightarrow e_{A}^{2}$ or $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{A}^{1}$ is an unforced value then $e_{A}^{1}:T\rightarrow T$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{A}^{1}=\lambda x:T.e_{A}^{3}$ by canonical forms (Lemma \ref{cf}).  $\mathtt{fix}$ $(\lambda x:T.e_{A}^{3})\rightarrow e_{A}^{3}[\mathtt{fix}$ $(\lambda x:T.e_{A}^{3})/x]$.  If $e_{A}^{1}\rightarrow e_{A}^{2}$ then $\mathtt{fix}$ $e_{A}^{1}\rightarrow\mathtt{fix}$ $e_{A}^{2}$.  If $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{fix}$ $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}: string}.
+
+\end{case}
+
+% e<t>
+
+\begin{case}
+
+$e_{A}=e_{A}^{1}$ $\lbrace T_{1}\rbrace$ where $A\in\lbrace H,M\rbrace$
+
+$e_{A}^{1}$ is an unforced value or $e_{A}^{1}\rightarrow e_{A}^{2}$ or $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{A}^{1}$ is an unforced value then $e_{A}^{1}:\forall X.T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{A}^{1}\in\lbrace\Lambda X.e_{A}^{3},{^{\forall X.T_{2}}A}S$ $v_{S}\rbrace$ by canonical forms (Lemma \ref{cf}).  $(\Lambda X.e_{A}^{3})$ $\lbrace T_{1}\rbrace\rightarrow e_{A}^{3}[T_{1}/X]$.  $(^{\forall X.T_{2}}AS$ $v_{S})$ $\lbrace T_{1}\rbrace\rightarrow{^{T_{2}[T_{1}^{a}/X]}A}S$ $v_{S}$.  If $e_{A}^{1}\rightarrow e_{A}^{2}$ then $e_{A}^{1}$ $\lbrace T_{1}\rbrace\rightarrow e_{A}^{2}$ $\lbrace T_{1}\rbrace$.  If $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $e_{A}^{1}$ $\lbrace T_{1}\rbrace\rightarrow$ \emph{\textbf{Error}: string}.
+
+\end{case}
+
+% ML cons e e
+
+\begin{case}
+
+$e_{M}=\mathtt{cons}$ $e_{M}^{1}$ $e_{M}^{2}$
+
+$e_{M}^{1}$ is an unforced value or $e_{M}^{1}\rightarrow e_{M}^{3}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}\rightarrow e_{M}^{3}$ then $\mathtt{cons}$ $e_{M}^{1}$ $e_{M}^{2}\rightarrow\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{cons}$ $e_{M}^{1}$ $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{M}^{2}$ is an unforced value or $e_{M}^{2}\rightarrow e_{M}^{4}$ or $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{2}\rightarrow e_{M}^{4}$ and $e_{M}^{1}$ is an unforced value then $\mathtt{cons}$ $e_{M}^{1}$ $e_{M}^{2}\rightarrow\mathtt{cons}$ $e_{M}^{1}$ $e_{M}^{4}$.  If $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}: string} and $e_{M}^{1}$ is an unforced value then $\mathtt{cons}$ $e_{M}^{1}$ $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ and $e_{M}^{2}$ are unforced values then $\mathtt{cons}$ $e_{M}^{1}$ $e_{M}^{2}$ is an unforced value.
+
+\end{case}
+
+% Haskell f e
+
+\begin{case}
+
+$e_{H}=f$ $e_{H}^{1}$
+
+$e_{H}^{1}$ is an unforced value or $e_{H}^{1}\rightarrow e_{H}^{2}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{H}^{1}$ is an unforced value then $e_{H}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}\in\lbrace\mathtt{nil}^{T},\mathtt{cons}$ $e_{H}^{3}$ $e_{H}^{4}\rbrace$ by canonical forms (Lemma \ref{cf}).  $\mathtt{hd}$ $\mathtt{nil}^{T}\rightarrow\mathtt{wrong}^{T}$ \emph{``Empty list"}.  $\mathtt{tl}$ $\mathtt{nil}^{T}\rightarrow\mathtt{wrong}^{[T]}$ \emph{``Empty list"}.  $\mathtt{hd}$ $(\mathtt{cons}$ $e_{H}^{3}$ $e_{H}^{4})\rightarrow e_{H}^{3}$.  $\mathtt{tl}$ $(\mathtt{cons}$ $e_{H}^{3}$ $e_{H}^{4})\rightarrow e_{H}^{4}$.  If $e_{H}^{1}\rightarrow e_{H}^{2}$ then $f$ $e_{H}^{1}\rightarrow f$ $e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $f$ $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string}.
+
+\end{case}
+
+% ML f e
+
+\begin{case}
+
+$e_{M}=f$ $e_{M}^{1}$
+
+$e_{M}^{1}$ is an unforced value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}$ is an unforced value then $e_{M}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}\in\lbrace\mathtt{nil}^{T},\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2},{^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ by canonical forms (Lemma \ref{cf}).  $\mathtt{hd}$ $\mathtt{nil}^{T}\rightarrow\mathtt{wrong}^{T}$ \emph{``Empty list"}.  $\mathtt{tl}$ $\mathtt{nil}^{T}\rightarrow\mathtt{wrong}^{[T]}$ \emph{``Empty list"}.  $\mathtt{hd}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})\rightarrow v_{M}^{1}$.  $\mathtt{tl}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})\rightarrow v_{M}^{2}$.  $\mathtt{hd}$ $({^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow{^{T}M}H^{T}$ $e_{H}^{1}$.  $\mathtt{tl}$ $({^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow{^{[T]}M}H^{[T]}$ $e_{H}^{2}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $f$ $e_{M}^{1}\rightarrow f$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $f$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.
+
+\end{case}
+
+% o e e
+
+\begin{case}
+
+$e_{A}=o$ $e_{A}^{1}$ $e_{A}^{2}$ where $A\in\lbrace H,M\rbrace$
+
+$e_{A}^{1}$ is an unforced value or $e_{A}^{1}\rightarrow e_{A}^{3}$ or $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{A}^{1}\rightarrow e_{A}^{3}$ then $o$ $e_{A}^{1}$ $e_{A}^{2}\rightarrow o$ $e_{A}^{3}$ $e_{A}^{2}$.  If $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $o$ $e_{A}^{1}$ $e_{A}^{2}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{A}^{2}$ is an unforced value or $e_{A}^{2}\rightarrow e_{A}^{4}$ or $e_{A}^{2}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{A}^{2}\rightarrow e_{A}^{4}$ and $e_{A}^{1}$ is an unforced value then $o$ $e_{A}^{1}$ $e_{A}^{2}\rightarrow o$ $e_{A}^{1}$ $e_{A}^{4}$.  If $e_{A}^{2}\rightarrow$ \emph{\textbf{Error}: string} and $e_{A}^{1}$ is an unforced value then $o$ $e_{A}^{1}$ $e_{A}^{2}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{A}^{1}$ and $e_{A}^{2}$ are unforced values otherwise.  $e_{A}^{1}:N$ and $e_{A}^{2}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{A}^{1}=\overline{n_{1}}$ and $e_{A}^{2}=\overline{n_{2}}$ by canonical forms (Lemma \ref{cf}).  $+$ $\overline{n_{1}}$ $\overline{n_{2}}\rightarrow\overline{n_{1}+n_{2}}$.  $-$ $\overline{n_{1}}$ $\overline{n_{2}}\rightarrow\overline{max(n_{1}-n_{2},0)}$.
+
+\end{case}
+
+% Haskell null? e
+
+\begin{case}
+
+$e_{H}=\mathtt{null?}$ $e_{H}^{1}$
+
+$e_{H}^{1}$ is an unforced value or $e_{H}^{1}\rightarrow e_{H}^{2}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{H}^{1}$ is an unforced value then $e_{H}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}\in\lbrace\mathtt{nil}^{T},\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}\rbrace$ by canonical forms (Lemma \ref{cf}).  $\mathtt{null?}$ $\mathtt{nil}^{T}\rightarrow\overline{0}$.  $\mathtt{null?}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rightarrow\overline{1}$.  If $e_{H}^{1}\rightarrow e_{H}^{2}$ then $\mathtt{null?}$ $e_{H}^{1}\rightarrow\mathtt{null?}$ $e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{null?}$ $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string}.
+
+\end{case}
+
+% ML null? e
+
+\begin{case}
+
+$e_{M}=\mathtt{null?}$ $e_{M}^{1}$
+
+$e_{M}^{1}$ is an unforced value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}$ is an unforced value then $e_{M}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}\in\lbrace\mathtt{nil}^{T},\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2},{^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ by canonical forms (Lemma \ref{cf}).  $\mathtt{null?}$ $\mathtt{nil}^{T}\rightarrow\overline{0}$.  If $e_{M}^{1}\in\lbrace\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2},{^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ then $\mathtt{null?}$ $e_{M}^{1}\rightarrow\overline{1}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $\mathtt{null?}$ $e_{M}^{1}\rightarrow\mathtt{null?}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{null?}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.
+
+\end{case}
+
+% if0 e e e
+
+\begin{case}
+
+$e_{A}=\mathtt{if0}$ $e_{A}^{1}$ $e_{A}^{2}$ $e_{A}^{3}$ where $A\in\lbrace H,M\rbrace$
+
+$e_{A}^{1}$ is an unforced value or $e_{A}^{1}\rightarrow e_{A}^{4}$ or $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{A}^{1}$ is an unforced value then $e_{A}^{1}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{A}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}).  $\mathtt{if0}$ $\overline{0}$ $e_{A}^{2}$ $e_{A}^{3}\rightarrow e_{A}^{2}$.  $\mathtt{if0}$ $\overline{n}$ $e_{A}^{2}$ $e_{A}^{3}\rightarrow e_{A}^{3}$ $(n\neq 0)$.  If $e_{A}^{1}\rightarrow e_{A}^{4}$ then $\mathtt{if0}$ $e_{A}^{1}$ $e_{A}^{2}$ $e_{A}^{3}\rightarrow \mathtt{if0}$ $e_{A}^{4}$ $e_{A}^{2}$ $e_{A}^{3}$.  If $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{if0}$ $e_{A}^{1}$ $e_{A}^{2}$ $e_{A}^{3}\rightarrow$ \emph{\textbf{Error}: string}.
+
+\end{case}
+
+% wrong t string
+
+\begin{case}
+
+$e_{A}=\mathtt{wrong}^{T}$ \emph{string} where $A\in\lbrace H,M\rbrace$
+
+$\mathtt{wrong}^{T}$ $\mathrm{string}\rightarrow$ \emph{\textbf{Error}: string}.
+
+\end{case}
+
+% hm t t e
+
+\begin{case}
+
+$e_{H}={^{T}H}M$ $e_{M}^{1}$
+
+$e_{M}^{1}$ is an unforced value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $^{T}HM$ $e_{M}^{1}\rightarrow{^{T}H}M$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $^{T}HM$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ is an unforced value then $T$ determines the reduction of $^{T}HM$ $e_{M}^{1}$:
+
+\begin{subcase}
+
+$T=L$
+
+$e_{M}^{1}={^{L}M}S$ $v_{S}$ by canonical forms (Lemma \ref{cf}).  $^{L}HM$ $(^{L}MS$ $v_{S})\rightarrow{^{L}H}S$ $v_{S}$.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=N$
+
+$e_{M}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}).  $^{N}HM$ $\overline{n}\rightarrow\overline{n}$.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=[T_{1}]$
+
+$e_{M}^{1}\in\lbrace\mathtt{nil}^{T_{1}},\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2},{^{[T_{1}]}M}H$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ by canonical forms (Lemma \ref{cf}).  $^{[T_{1}]}HM$ $\mathtt{nil}^{T}\rightarrow\mathtt{nil}^{T}$.  $^{[T_{1}]}HM$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})\rightarrow\mathtt{cons}$ $(^{T_{1}}HM$ $v_{M}^{1})$ $(^{[T_{1}]}HM$ $v_{M}^{2})$.  $^{[T_{1}]}HM$ $(^{[T_{1}]}MH$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}$.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=T_{1}^{a}$
+
+Cannot occur because $T_{1}^{a}$ occurs only in $^{T_{1}^{a}}HS$ $e_{S}$.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=T_{1}\rightarrow T_{2}$
+
+$e_{M}^{1}=\lambda x_{1}:T_{1}.e_{M}^{3}$ by canonical forms (Lemma \ref{cf}).  $^{T_{1}\rightarrow T_{2}}HM$ $(\lambda x_{1}:T_{1}.e_{M}^{3})\rightarrow\lambda x_{2}:T_{1}.(^{T_{2}}HM$ $((\lambda x_{1}:T_{1}.e_{M}^{3})$ $(^{T_{1}}MH$ $x_{2})))$.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=\forall X.T_{1}$
+
+$e_{M}^{1}\in\lbrace\Lambda X.e_{M}^{3},{^{\forall X.T_{1}}M}S$ $v_{S}\rbrace$ by canonical forms (Lemma \ref{cf}).  $^{\forall X.T_{1}}HM$ $(\Lambda X.e_{M}^{3})\rightarrow\Lambda X.(^{T_{1}}HM$ $e_{M}^{3})$.  $^{\forall X.T_{1}}HM$ $(^{\forall X.T_{1}}MS$ $v_{S})\rightarrow{^{\forall X.T_{1}}H}S$ $v_{S}$.
+
+\end{subcase}
+
+\end{case}
+
+% mh t t e
+
+\begin{case}
+
+$e_{M}={^{T}M}H$ $e_{H}$
+
+$^{T}MH$ $e_{H}$ is an unforced value.
+
+\end{case}
+
+% hs k e
+
+\begin{case}
+
+$e_{A}={^{T}A}S$ $e_{S}^{1}$ where $A\in\lbrace H,M\rbrace$
+
+$e_{S}^{1}$ is an unforced value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by Scheme progress (Theorem \ref{sps}).  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $^{T}AS$ $e_{S}^{1}\rightarrow{^{T}A}S$ $e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $^{T}AS$ $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{S}^{1}$ is an unforced value then $T$ determines the reduction of $^{T}AS$ $e_{S}^{1}$:
+
+\begin{subcase}
+
+$T=L$
+
+$^{L}AS$ $e_{S}^{1}$ is an unforced value.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=N$
+
+$^{N}AS$ $\overline{n}\rightarrow\overline{n}$.  $^{N}AS$ $e_{S}^{1}\rightarrow\mathtt{wrong}^{N}$ \emph{``Not a number"} $(e_{S}^{1}\neq\overline{n})$.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=[T_{1}]$
+
+$^{[T_{1}]}AS$ $\mathtt{nil}\rightarrow\mathtt{nil}^{T_{1}}$.  $^{[T_{1}]}AS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})\rightarrow\mathtt{cons}$ $(^{T_{1}}AS$ $v_{S}^{1})$ $(^{[T_{1}]}AS$ $v_{S}^{2})$.  $^{[T_{1}]}HS$ $(SH^{[T_{1}]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}$.  $^{[T_{1}]}MS$ $(SH^{[T_{1}]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow{^{[T_{1}]}M}H^{[T_{1}]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$.  $^{[T_{1}]}AS$ $e_{S}^{1}\rightarrow\mathtt{wrong}^{[T_{1}[T_{i}/T_{i}^{a}]]}$ \emph{``Not a list"} $(e_{S}^{1}\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2},SH^{[T_{1}]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=T_{1}^{a}$
+
+$^{T_{1}^{a}}HS$ $(SH^{T_{1}^{a}}$ $e_{H})\rightarrow e_{H}$.  $^{T_{1}^{a}}HS$ $e_{S}^{1}\rightarrow\mathtt{wrong}^{T_{1}}$ \emph{``Parametricity violated"} $(e_{S}^{1}\neq SH^{T_{1}^{a}}$ $e_{H})$.  $^{T_{1}^{a}}MS$ $(SM^{T_{1}^{a}}$ $v_{M})\rightarrow v_{M}$.  $^{T_{1}^{a}}MS$ $e_{S}^{1}\rightarrow\mathtt{wrong}^{T_{1}}$ \emph{``Parametricity violated"} $(e_{S}^{1}\neq SM^{T_{1}^{a}}$ $v_{M})$.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=T_{1}\rightarrow T_{2}$
+
+$^{T_{1}\rightarrow T_{2}}AS$ $(\lambda x_{1}.e_{S}^{3})\rightarrow\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(^{T_{2}}AS$ $((\lambda x_{1}.e_{S}^{3})$ $(SA^{T_{1}}$ $x_{2})))$.  $^{T_{1}\rightarrow T_{2}}AS$ $e_{S}^{1}\rightarrow\mathtt{wrong}^{(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]]}$ \emph{``Not a function"} $(e_{S}^{1}\neq\lambda x_{1}.e_{S}^{3})$.
+
+\end{subcase}
+
+\begin{subcase}
+
+$T=\forall X.T_{1}$
+
+$^{\forall X.T_{1}}AS$ $e_{S}^{1}$ is an unforced value.
+
+\end{subcase}
+
+\end{case}
+
+% ML
+
+% cons v v
+
+\newcommand{\psconsm}{\expcons{\first{\varvalum}}{\second{\varvalum}}\xspace}
+
+\begin{case}
+
+\psconsm
+
+\psconsm is a \profv.
+
+\end{case}
+
+% ML e e
+
+\begin{case}
+
+$e_{M}=e_{M}^{1}$ $e_{M}^{2}$
+
+$e_{M}^{1}$ is an unforced value or $e_{M}^{1}\rightarrow e_{M}^{3}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}$ is an unforced value then $e_{M}^{1}:T_{1}\rightarrow T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}=\lambda x:T_{1}.e_{M}^{4}$ by canonical forms (Lemma \ref{cf}).  If $e_{M}^{1}\rightarrow e_{M}^{3}$ then $e_{M}^{1}$ $e_{M}^{2}\rightarrow e_{M}^{3}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $e_{M}^{1}$ $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{M}^{2}$ is an unforced value or $e_{M}^{2}\rightarrow e_{M}^{5}$ or $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{2}\rightarrow e_{M}^{5}$ and $e_{M}^{1}$ is an unforced value then $e_{M}^{1}$ $e_{M}^{2}\rightarrow e_{M}^{1}$ $e_{M}^{5}$.  If $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}: string} and $e_{M}^{1}$ is an unforced value then $e_{M}^{1}$ $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ is an unforced value and $e_{M}^{2}$ is an unforced value then $(\lambda x:T_{1}.e_{M}^{4})$ $e_{M}^{2}\rightarrow e_{M}^{4}[e_{M}^{2}/x]$.
+
+\end{case}
 
 \end{proof}
 
